# homework

homework-1/: 1-1.c++  1-2.c++  1-3.c++
homework-11/11-2/: main.cpp
homework-12/12-1/: main.cpp
homework-12/12-2/: main.cpp
homework-13/13-1/: main.cpp
homework-13/13-2/: main.cpp
homework-13/13-3/: main.cpp
homework-14/14-1/: main.cpp
homework-14/14-2/: main.cpp
homework-14/14-3/: main.cpp
homework-15/15-1/: main.cpp
homework-15/15-2/: main.cpp
homework-16/16-1/: main.cpp
homework-16/16-2/: main.cpp
homework-16/16-3/: main.cpp
homework-17/17-1/: main.cpp
homework-17/17-2/: graph.txt  main.cpp
homework-18/18-1/: main.cpp  (+1 more)
homework-2/: 2-1.c++  2-2.c++
homework-38/: CMakeLists.txt  main.cpp
homework-39/: CMakeLists.txt  dialog.h  dialog.ui  mainwindow.ui
homework-4/: 4-1.c++  4-2.c++  4-2.cpp  4-3.c++
homework-41/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
homework-42/: CMakeLists.txt  examplerace.cpp  examplerace.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
homework-43/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
homework-44/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  dbdata.h  dbdata.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
homework-45/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
homework-46/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  structs.h  tcpclient.cpp  tcpclient.h
homework-6/: 6-1.cpp  6-2.cpp
homework-7/: 7-1.cpp
homework-8/: 8-1.cpp  8-2.cpp
(+359 files in other folders)
