cmake_minimum_required(VERSION 3.16)
project(App)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(App main.cpp)
find_package(Qt6 REQUIRED COMPONENTS Sql)
find_package(Qt6 REQUIRED COMPONENTS Network)
target_link_libraries(App PRIVATE Qt6::Sql)
target_link_libraries(App PRIVATE Qt6::Network)